src/objects/DNC_Wash_Rule__c.object
<CustomObject>
    <description>Save once rule</description>
    <fields>
        <fullName>Api_Field_Name__c</fullName>
        <label>Api Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>is equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is less than</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DNC Wash Rule</label>
    <nameField>
        <label>DNC Wash Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DNC Wash Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>